--- a/VideoScraper/index.html
+++ b/VideoScraper/index.html
@@ -141,6 +141,20 @@ h1{
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
-	<script src="../js/index.js"></script>
+	<script type="text/javascript">
+	function showInput() {
+	    var element = document.getElementById('search');
+	    element.classList.toggle("active");
+	}
+
+	var input = document.getElementById("url");
+
+	input.addEventListener("keyup", function(event) {
+		event.preventDefault();
+		if (event.keyCode === 13) {
+		alert("okkk");
+		}
+	});
+	</script>
 </body>
 </html>
