--- a/VideoScraper/Web/index.html
+++ b/VideoScraper/Web/index.html
@@ -122,7 +122,7 @@ h1{
 <body>
 
 	<div>
-		<h1>VideoScraper</h1>
+		<h1>Video API</h1>
 	</div>
 
 	<div id="search" class="search">
@@ -152,7 +152,7 @@ h1{
 	input.addEventListener("keyup", function(event) {
 		event.preventDefault();
 		if (event.keyCode === 13) {
-		alert("okkk");
+			alert("okkk");
 		}
 	});
 	</script>
